clear filename filter on component unmount fixes issue where media canvas could get stuck in a filtered state if open additional filters with input in the filter input field
fix additional filters container to grow as needed

--- a/src/app/components/shell-ui/additional-filters-list.css
+++ b/src/app/components/shell-ui/additional-filters-list.css
@@ -3,7 +3,7 @@
     flex-flow: row;
     align-items: center;
     justify-content: flex-end;
-    width: 180px;
+    min-width: 180px;
     height: 24px;
     font-size: 14px;
 }
